--- a/templates/alertad.conf.j2
+++ b/templates/alertad.conf.j2
@@ -1,4 +1,4 @@
-DATABASE_URL = 'mongodb://{{ alerta_mongod_hosts | list | join(",") }}:{{ alerta_mongod_port }}/?{% if ( alerta_mongod_replset is defined ) and ( alerta_servers|length is not divisibleby 2 ) and ( alerta_servers|length > 2 ) %}replicaSet={{ alerta_mongod_replset | default("ALERTA") | upper }}&{% endif %}connectTimeoutMS=300000'
+DATABASE_URL = 'mongodb://{% if alerta_mongod_auth | bool %}{{ alerta_mongod_user }}:{{ alerta_mongod_pass | urlencode }}@{% endif %}{{ alerta_mongod_hosts | list | join(",") }}:{{ alerta_mongod_port }}/ALERTA?{% if ( alerta_mongod_replset is defined ) and ( alerta_servers|length is not divisibleby 2 ) and ( alerta_servers|length > 2 ) %}replicaSet={{ alerta_mongod_replset | default("ALERTA") | upper }}&{% endif %}connectTimeoutMS=300000'
 DATABASE_NAME = 'ALERTA'
 DATABASE_RAISE_ON_ERROR = False
 CORS_ORIGINS = [ 'https?://\w*\:?\d*/?.*' ]
@@ -14,6 +14,7 @@ LOG_BACKUP_COUNT = {{ alerta_arg.log_backup_count }}
 LOG_FORMAT = '{{ alerta_arg.log_format }}'
 {% if alerta_plugin_list is defined %}
 PLUGINS = ['{{ alerta_plugin_list | list | join("','") }}']
+PLUGINS_RAISE_ON_ERROR = False
 {% endif %}
 {% if alerta_plugin_list is defined and  'prometheus' in alerta_plugin_list %}
 ALERTMANAGER_API_URL = '{{ (lookup('dict', alerta_plugins, wantlist=True ) | json_query('[?key==`prometheus`].value[0].alertmanager_api_url'))[0] | default('http://127.0.0.1:9093') }}'
