modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/register.yml 	modified:   templates/alertad.conf.j2 	modified:   vars/main.yml

--- a/templates/alertad.conf.j2
+++ b/templates/alertad.conf.j2
@@ -1,14 +1,15 @@
 DATABASE_URL = 'mongodb://{% if alerta_mongod_auth | bool %}{{ alerta_mongod_user }}:{{ alerta_mongod_pass | urlencode }}@{% endif %}{{ alerta_mongod_hosts | list | join(":" + alerta_mongod_port + ",") }}:{{ alerta_mongod_port }}/ALERTA?{% if ( alerta_mongod_replset is defined ) and ( alerta_servers|length is not divisibleby 2 ) and ( alerta_servers|length > 2 ) %}replicaSet={{ alerta_mongod_replset | default("ALERTA") | upper }}&{% endif %}connectTimeoutMS=300000'
 DATABASE_NAME = 'ALERTA'
 DATABASE_RAISE_ON_ERROR = False
-COLUMNS = ['severity', 'status', 'type', 'lastReceiveTime', 'duplicateCount', 'environment', 'group', 'resource', 'service', 'text']
+COLUMNS = ['severity', 'status', 'type', 'lastReceiveTime', 'duplicateCount', 'customer', 'environment', 'group', 'resource', 'service', 'text']
 CORS_ORIGINS = [ 'https?://\w*\:?\d*/?.*' ]
 AUTH_REQUIRED = True
+CUSTOMER_VIEWS = True
 BASE_URL = '{{ alerta_arg.base_url }}'
 USE_PROXYFIX = {{ alerta_arg.use_proxyfix }}
 SECRET_KEY = '{{ lookup('password', '' + alerta_cluster + ':authentication:tokens length=32 chars=ascii_letters,digits') }}'
 AUTH_PROVIDER = '{{ alerta_arg.auth_provider }}'
-ADMIN_USERS = ['{{ alerta_admin_user }}']
+ADMIN_USERS = ['{{ alerta_admin_user }}','prometheus@example.com']
 SIGNUP_ENABLED = {{ alerta_arg.signup_enabled }}
 SITE_LOGO_URL = '{{ alerta_arg.site_logo_url | default("") }}'
 SEVERITY_MAP = {
@@ -19,7 +20,7 @@ SEVERITY_MAP = {
   'ok': 5
 }
 DEFAULT_NORMAL_SEVERITY = 'ok'
-DEFAULT_PREVIOUS_SEVERITY = '{{ vars['alerta_incident_' + alerta_incident_levels_map].info }}'
+DEFAULT_PREVIOUS_SEVERITY = 'ok'
 COLOR_MAP = {
   'severity': {
     '{{ vars['alerta_incident_' + alerta_incident_levels_map].critical }}': 'red',
@@ -37,7 +38,7 @@ LOG_FILE = '/var/log/alerta/alertad.log'
 LOG_MAX_BYTES = {{ alerta_arg.log_max_mib }}*1024*1024
 LOG_BACKUP_COUNT = {{ alerta_arg.log_backup_count }}
 LOG_FORMAT = '{{ alerta_arg.log_format }}'
-ALLOWED_ENVIRONMENTS = ['{{ alerta_allowed_environments | list | join("','") | upper }}']
+ALLOWED_ENVIRONMENTS = ['{{ alerta_allowed_environments | list | join("','") | lower }}']
 {% if alerta_plugin_list is defined %}
 PLUGINS = ['{{ alerta_plugin_list | list | join("','") }}']
 PLUGINS_RAISE_ON_ERROR = False
