modified:   templates/uwsgi.ini.j2

--- a/templates/uwsgi.ini.j2
+++ b/templates/uwsgi.ini.j2
@@ -7,6 +7,9 @@ env = BASE_URL=/api
 master = true
 processes = 5
 logger = syslog:alertad
+log-4xx = true
+log-5xx = true
+disable-logging = true
 https = {{ ansible_default_ipv4.address }}:{{ alerta_port_arg.api }},/etc/nginx/ssl/alerta.crt,/etc/nginx/ssl/alerta.key,HIGH,/etc/nginx/ssl/ca-cert.pem
 uid = nobody
 gid = nobody
